package com.example.util.enums

/**
 * All the application roles
 * @author Reshwan Barhoe
 */
enum class Roles {
    @Suppress("unused")
    MANAGER,
    MEMBER
}